# Spacemoney

./: .gitignore  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_NOTES.md  Makefile  README.md  VERCEL_DEPLOYMENT.md  deploy.sh  netlify.toml
spacemoney-contract/: Anchor.toml  README.md  package.json  tsconfig.json
spacemoney-contract/migrations/: deploy.ts
spacemoney-contract/programs/spacemoney/: Cargo.toml
spacemoney-contract/programs/spacemoney/src/: constants.rs  errors.rs  events.rs  lib.rs
spacemoney-contract/programs/spacemoney/src/instructions/: admin_transfer.rs  claim_rewards.rs  deposit_sol.rs  deposit_usdt.rs  force_withdraw.rs  initialize.rs  mod.rs  pause_program.rs  resume_program.rs  set_admin.rs  set_usdt_mint.rs  update_tier_config.rs  withdraw_sol.rs  withdraw_usdt.rs
spacemoney-contract/programs/spacemoney/src/states/: mod.rs  platform_state.rs  tier_config.rs  user_account.rs
spacemoney-contract/programs/spacemoney/src/utils/: calculations.rs  mod.rs  token_utils.rs
spacemoney-contract/tests/: spacemoney.ts
spacemoney-frontend/: .env.example  .eslintrc.cjs  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
spacemoney-frontend/public/: idl.json
spacemoney-frontend/src/: App.jsx  index.jsx
spacemoney-frontend/src/components/: Footer.jsx  Header.jsx  Layout.jsx
spacemoney-frontend/src/contexts/: ToastContext.jsx  WalletContext.jsx
spacemoney-frontend/src/hooks/: useAdminActions.js  useClaimRewards.js  useContract.js  useContractData.js  useDeposit.js  useProgram.js  useTokenBalance.js  (+2 more)
(+16 files in other folders)
